--- a/project01/css/style.css
+++ b/project01/css/style.css
@@ -156,13 +156,13 @@ main{width: 100%; height: 800px;}
 .con3_line>div{width: 100%; height: 380px; margin-top: 15px;}
 
 /* 갤러리 슬라이드 */
-.gallery_slide{width: 100%; height: 100%; position: relative;
+.gallery_slide{width: 100%; height: 100%; position: relative; overflow: hidden;
     /* background-image: url(../images/gallery_photo1.jpg);*/ background-color: burlywood; background-repeat: no-repeat; background-size: cover; }
 .bxslider>ul>li>img{width: 100%;}
 .gallery_slide .bx-wrapper{width: 720px; box-shadow: none; -webkit-box-shadow: none; border: none; margin: 0;}
 .gallery_slide .bx-wrapper img{max-width: none;}
-#bx-pager{position: relative; top: -50px; left: -16%;}
-
+#bx-pager{position: relative; top: -12%; right: 15%;}
+#bx-pager a{float: right; padding-right: 5px;}
 
 /* 화살표 */
 .gallery_slide span{position: absolute; display: inline-block; width: 30px; height: 6px; background-color: #fff; border-radius: 3px; cursor: pointer;}
@@ -202,11 +202,11 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
 
 /* 사이드 메뉴 */
 .main_menu{display: none;}
-.side_menu{display: block; position: fixed; top: 0; right: -60px; width: 50vw; height: 100vh; z-index:10;
-            padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);} */
+.side_menu{display: block; position: fixed; top: 0; right: 0px; width: 80vw; height: 100vh; z-index:999;
+            padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);} 
 
 .cancle{display: block; position: relative; /*width: 35px; height: 25px;*/ z-index: 15;}
-.cancle>div{width: 35px; height: 25px; position: absolute; top:50px; left: 40px; cursor: pointer;}
+.cancle>div{width: 35px; height: 25px; position: absolute; top:-50px; left: 40px; cursor: pointer;}
 .cancle span{display: block; width: 100%; height: 3px; background-color: black; 
             position: absolute; top:50%;}
 .cancle span:first-child{transform: rotate(45deg);}
@@ -244,6 +244,7 @@ footer{height: 600px; position: relative;}
 .container2 .news{display: none;}
 .con2_set{width: 45%; margin-left: 3%;}
 .con2_set:last-child{float:left;}
+.container3>div>div:last-child a{float: right; }
 }
 
 @media (max-width: 800px){
@@ -263,20 +264,19 @@ footer{height: 600px; position: relative;}
 .container3{height: 1000px;}
 .con3_set{float:none; width: 90%; height: 500px; margin: 0 auto;}
 .con3_set:last-child{width: 90%; height: 500px; margin: 0 auto;}
-.container3>div>div:last-child a{background:yellow;}
-
-/* 컨테이너 3 갤러리유튜브
-.container3{width: 100%; height: 460px; margin-top: 60px; box-sizing: border-box;}
-.con3_set{width: 60%; height: 400px; float: left; border-top: 2px solid #ffaa59;}
-.con3_set:last-child{width: 38%; height: 400px; margin-left: 2%;}
-.con3_set>div{width: 100%; height: 50px;}
-.con3_set h3{float: left; line-height: 50px; font-size: 1rem; padding-left: 10px;}
-.con3_set h4{float: left; line-height: 55px; font-weight: normal; padding-left: 10px; color: #c19973; font-size: 0.85rem;}
-.con3_set a{float: right; line-height: 55px; font-size: 0.7rem; color: #aaa; padding-right: 10px;}
-.con3_line{width: 100%; border-top: 1px solid #c19973;}
-.con3_line>div{width: 100%; height: 380px; margin-top: 15px;} */
+.container3>div>div:last-child a{float: right; }
+#bx-pager{right: 10%;}
+}
+@media (max-width: 600px){
+    #bx-pager{right: 0%;}
+}
+@media (max-width: 510px){
+    #bx-pager{ right: 0%;}
+    #bx-page img{width: 30px;}
+    bx-pager.bx-default-pager a{width: 30px;}
 
 }
+
 
 
 /*
@@ -289,11 +289,11 @@ footer{height: 600px; position: relative;}
 */
 
 /* 제출용 */
-.main_list:nth-child(1)>a{color: aqua;}
-.main_list:nth-child(1)>a{color: aqua;}
-.main_list:nth-child(2)>a{color: aqua;}
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(2)>a{color: #ffaa59;}
 
-.main_list:nth-child(1) ul>li:nth-child(1){color: aqua;}
-.main_list:nth-child(1) ul>li:nth-child(2){color: aqua;}
-.main_list:nth-child(2) ul>li:nth-child(1){color: aqua;}
+.main_list:nth-child(1) ul>li:nth-child(1){color: #ffaa59;}
+.main_list:nth-child(1) ul>li:nth-child(2){color: #ffaa59;}
+.main_list:nth-child(2) ul>li:nth-child(1){color: #ffaa59;}
 
