--- a/project01/css/style_sub1.css
+++ b/project01/css/style_sub1.css
@@ -120,14 +120,13 @@ table td{padding-left: 15px;}
 /* .bookmark>ul>li:hover .set{color: #c19973; background-color: #fff;} */
 .textbox{width: 750px; height: 300px; background-color: #fff;
         position: absolute; left: -60%;}
-.textbox>div{float: left; width: 30%; height: 100%; margin-top: 10px;}
+.textbox>div{float: left; width: 30%; height: 100%; margin-top: 20px;}
 
 .history_img{background:url(../images/history.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;}
 .novel_img{background: url(../images/novel.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;}
 .movie_img{background: url(../images/movie.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;}
 .bookmark p{float: left; width: 70%; height: 100%;
             padding: 20px; box-sizing: border-box; line-height: 1.6rem;}
-
 
 /* 책갈피 끝 */
 
@@ -169,16 +168,16 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
         .hamburger span:last-child{bottom: 0;}
     
     /* 사이드 메뉴 */
-.main_menu{display: none;}
-.side_menu{display: block; position: fixed; top: 0; right: -60px; width: 50vw; height: 100vh; z-index:10;
-            padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);} */
+    .main_menu{display: none;}
+    .side_menu{display: block; position: fixed; top: 0; right: 0px; width: 80vw; height: 100vh; z-index:999;
+                padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);}
 
-.cancle{display: block; position: relative; /*width: 35px; height: 25px;*/ z-index: 15;}
-.cancle>div{width: 35px; height: 25px; position: absolute; top:50px; left: 40px; cursor: pointer;}
-.cancle span{display: block; width: 100%; height: 3px; background-color: black; 
-            position: absolute; top:50%;}
-.cancle span:first-child{transform: rotate(45deg);}
-.cancle span:last-child{transform: rotate(-45deg);}
+    .cancle{display: block; position: relative; /*width: 35px; height: 25px;*/ z-index: 15;}
+    .cancle>div{width: 35px; height: 25px; position: absolute; top:-50px; left: 40px; cursor: pointer;}
+    .cancle span{display: block; width: 100%; height: 3px; background-color: black; 
+                position: absolute; top:50%;}
+    .cancle span:first-child{transform: rotate(45deg);}
+    .cancle span:last-child{transform: rotate(-45deg);}
 
 .Smain_list .title{padding: 10px 0 10px 15%; border-bottom: #807269 1px solid; background-color:#fff; font-size: 1.25rem; font-family:'EBSHMJESaeronRA'; cursor: pointer;}
 .Smain_menu .Smain_list:first-child>div{border-top: #807269 1px solid;}
@@ -196,11 +195,12 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     .con_right{float: none;}
     .con .con_right{border:none; width: 70%; margin: 0 auto; padding: 0;}
     .con_right p{text-align: center;}
+    table{margin: 10%;}
     table td{padding-left: 20px;}
 
     .intro .con_right p{padding: 0; text-indent: 1rem;}
-    .history>.con_left h3{padding-bottom: 15px;}
-    .history>.con_right>table{width: 450px; margin: 0 auto;}
+    .historyyear>.con_left h3{padding-bottom: 15px;}
+    .historyyear>.con_right>table{width: 450px; margin: 0 auto;}
     .present>.con_left h3{padding-bottom: 15px;}
     .present>.con_right>table{margin: 0 auto;}
     .heritage>.con_left h3{padding: 10px 0 15px 0;}
@@ -214,7 +214,7 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     /* .textbox{width: 750px; height: 300px; background-color: #fff;
             position: absolute; left: -63%;}   
         텍스트박스 크기는 li에서 비롯되서 li 크기나 그 안의 div를 수정하고 1200일때 %로 수정해야댐 */
-    .textbox>div{float: none; margin: 0 auto;}
+    .textbox>div{float: none; margin: 15px auto;}
     .bookmark p{float: none; width: 70%; /*height: 100%;*/ margin: 0 auto;
         /*padding: 20px;*/ box-sizing: border-box; line-height: 1.6rem; text-indent: 1rem;}
     
@@ -226,5 +226,13 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     .f_left p{float: none; width: 100%; height: 150px; text-align: center; 
                 padding-left: 0; position:absolute; bottom:100px}
     .f_right{position: absolute; top:130px; left: calc(50% - 100px);}
-
 }
+
+/* 제출용 */
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(2)>a{color: #ffaa59;}
+
+.main_list:nth-child(1) ul>li:nth-child(1){color: #ffaa59;}
+.main_list:nth-child(1) ul>li:nth-child(2){color: #ffaa59;}
+.main_list:nth-child(2) ul>li:nth-child(1){color: #ffaa59;}
