--- a/project01/css/style_sub2.css
+++ b/project01/css/style_sub2.css
@@ -211,13 +211,13 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
         .hamburger span:nth-child(2){top:calc(50% - 1.5px)}
         .hamburger span:last-child{bottom: 0;}
     
-        /* 사이드 메뉴 */
+     /* 사이드 메뉴 */
     .main_menu{display: none;}
-    .side_menu{display: block; position: fixed; top: 0; right: -60px; width: 50vw; height: 100vh; z-index:10;
-                padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);} */
+    .side_menu{display: block; position: fixed; top: 0; right: 0px; width: 80vw; height: 100vh; z-index:999;
+                padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);}
 
     .cancle{display: block; position: relative; /*width: 35px; height: 25px;*/ z-index: 15;}
-    .cancle>div{width: 35px; height: 25px; position: absolute; top:50px; left: 40px; cursor: pointer;}
+    .cancle>div{width: 35px; height: 25px; position: absolute; top:-50px; left: 40px; cursor: pointer;}
     .cancle span{display: block; width: 100%; height: 3px; background-color: black; 
                 position: absolute; top:50%;}
     .cancle span:first-child{transform: rotate(45deg);}
@@ -250,7 +250,13 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     .f_left p{float: none; width: 100%; height: 150px; text-align: center; 
                 padding-left: 0; position:absolute; bottom:100px;}
     .f_right{position: absolute; top:130px; left: calc(50% - 100px);}
-
-
-
 }
+
+/* 제출용 */
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(2)>a{color: #ffaa59;}
+
+.main_list:nth-child(1) ul>li:nth-child(1){color: #ffaa59;}
+.main_list:nth-child(1) ul>li:nth-child(2){color: #ffaa59;}
+.main_list:nth-child(2) ul>li:nth-child(1){color: #ffaa59;}
