--- a/project01/css/style_sub3.css
+++ b/project01/css/style_sub3.css
@@ -114,30 +114,30 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
 .f_right{width: 25%; float: left; margin-top: 30px;}
 .sns{width: 225px; display: flex; padding-top: 25px;}
 .sns a{flex: 1;}
-.f_right p{padding: 20px 0 0 8px; font-size: 0.8rem; line-height: 1.5rem; }
+.f_right p{padding: 20px 0 0 8px; font-size: 0.8rem; line-height: 1.5rem;}
 .f_right p>a{color: #fff; color: rgb(220, 220, 220);}
 
 
 /* 미디어쿼리 1200 */
 @media (max-width: 1200px){
     /* 헤더 */
-        .inner{width: 100%;}
-        .logo{width: 13%;}
-        header nav{width: 120px; float: right;}
+    .inner{width: 100%;}
+    .logo{width: 13%;}
+    header nav{width: 120px; float: right;}
         
     /* 햄버거 - 사이드 바 */
-        .hamburger{display: block; width: 35px; height: 25px; float: left; margin: 60px 0 0 30px ; position: relative; cursor: pointer;}
-        .hamburger span{display: block; width: 100%; height: 3px; background-color: black; position: absolute; z-index: 10; transform: rotate();}
-        .hamburger span:nth-child(2){top:calc(50% - 1.5px)}
-        .hamburger span:last-child{bottom: 0;}
+    .hamburger{display: block; width: 35px; height: 25px; float: left; margin: 60px 0 0 30px ; position: relative; cursor: pointer;}
+    .hamburger span{display: block; width: 100%; height: 3px; background-color: black; position: absolute; z-index: 10; transform: rotate();}
+    .hamburger span:nth-child(2){top:calc(50% - 1.5px)}
+    .hamburger span:last-child{bottom: 0;}
     
     /* 사이드 메뉴 */
     .main_menu{display: none;}
-    .side_menu{display: block; position: fixed; top: 0; right: -60px; width: 50vw; height: 100vh; z-index:10;
-                padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);} */
+    .side_menu{display: block; position: fixed; top: 0; right: 0px; width: 80vw; height: 100vh; z-index:999;
+                padding: 110px 0 0 0; background-color:#fff; border-radius: 50px 0 0 0; box-shadow: -5px 0 5px rgba(61, 53, 45, 0.2);}
 
     .cancle{display: block; position: relative; /*width: 35px; height: 25px;*/ z-index: 15;}
-    .cancle>div{width: 35px; height: 25px; position: absolute; top:50px; left: 40px; cursor: pointer;}
+    .cancle>div{width: 35px; height: 25px; position: absolute; top:-50px; left: 40px; cursor: pointer;}
     .cancle span{display: block; width: 100%; height: 3px; background-color: black; 
                 position: absolute; top:50%;}
     .cancle span:first-child{transform: rotate(45deg);}
@@ -152,6 +152,13 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     .title:hover{color:#c19973;}
     .Ssub_menu>li:hover{color: #fff; background: #c19973;}
 
+   /* 컨테이너 01 */
+    .left{float: none; width:50%; border-bottom: #c19973 solid 4px; margin: 20px auto;}
+    .left>h3{text-align: center; padding: 1rem;}
+    .right{float: none; width: 100%; margin: 0; text-align: center; border-left: none;
+        margin-left: 0px; padding-left: 0px;}
+    table{margin: 0 auto; transition: 1s;}
+
     /* 풋터 */
     footer{height: 600px; position: relative;}
     .f_left{float: none; width: 100%; height: 300px;}
@@ -159,7 +166,34 @@ footer{width: 100%; height: 300px; background-color: #807269; margin-top: 100px;
     .f_left p{float: none; width: 100%; height: 150px; text-align: center; 
                 padding-left: 0; position:absolute; bottom:100px;}
     .f_right{position: absolute; top:130px; left: calc(50% - 100px);}
-
-
-
 }
+/* 미디어쿼리 800 */
+@media (max-width: 800px){
+    .Rtable{width: 100%;}
+    table{width: 560px; margin: 0 3%; transition: 1s;}
+}
+@media (max-width: 600px){
+    .Rtable{width:100%; overflow: auto;}
+    table{width:560px; margin: 0 3%;}
+    }
+@media (max-width: 400px){
+    .menu{width: 90%; height: fit-content; border: none; margin: 80px auto; cursor: pointer;}
+    .menu>div{width: 45%; height: 80px; float:left;}
+    .con_menu1{padding-top: 80px;}
+    /* 
+.menu{width: 405px; height: 80px; border: 1px solid #eee; margin: 80px auto; cursor: pointer;}
+.menu>div{width: 200px; height: 80px; float:left; background-color: #c19973; border: 1px solid #eee;
+    color: #fff; font-size: 1.5rem; text-align: center; line-height: 80px;}
+.menu>div:hover{background-color: #fff; color: #c19973; border: 1px solid #c19973;}
+.menu>.menu1.on1{background-color: #fff; color: #c19973;}
+.menu>.menu2.on2{background-color: #fff; color: #c19973;} */
+}
+
+/* 제출용 */
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(1)>a{color: #ffaa59;}
+.main_list:nth-child(2)>a{color: #ffaa59;}
+
+.main_list:nth-child(1) ul>li:nth-child(1){color: #ffaa59;}
+.main_list:nth-child(1) ul>li:nth-child(2){color: #ffaa59;}
+.main_list:nth-child(2) ul>li:nth-child(1){color: #ffaa59;}
