--- a/project02/css/style.css
+++ b/project02/css/style.css
@@ -30,7 +30,7 @@ header>div{width: 100%; height: 100%;}
 .head_right>a{margin-right: 30px;}
 
 /* 모바일 */
-@media (max-width: 1000px){
+@media (max-width: 1200px){
     header{width: 50%; height: 64px; float: left;}
     header>div{width: 40%; height: 100%; float: left;}
     .head_left{display: none;}
@@ -40,7 +40,7 @@ header>div{width: 100%; height: 100%;}
     .head_right>a{display: none;}
 }
 @media (max-width: 500px){
-    header{width: 80%; height: 64px; float: left;}
+    header{width: 50%; height: 64px; float: left;}
     .head_left{display: none;}
     .head_middle{width: 200px; height: 100%; line-height: 64px;}
     .head_middle img{width: 85%; margin-top: 25px;}
@@ -50,7 +50,6 @@ header>div{width: 100%; height: 100%;}
 
 /* 네비 ******************************************************************************/
 nav{width: 100%; background-color:#fcd555; text-align: center;}
-
 .hambuger{display: none; width: 30px; height: 22px; cursor: pointer;
     position: relative; top: 10px; right: -35%; z-index: 9999;}
 .hambuger>span{display: block; width: 30px; height: 2px; background-color: #c67a44; 
@@ -60,7 +59,7 @@ nav{width: 100%; background-color:#fcd555; text-align: center;}
 .hambuger>span:nth-child(3){bottom: 0; left: 0;}
 
 .Mm{width: 62.5%; height: 85px; margin: 0 auto; padding: 0;
-    position: relative;}
+    position: relative; display:block;}
 .Ml{float: left; width: 20%; height: 100%; line-height: 85px; font-size: 1.2rem; color: #fff; 
     background-color:#fcd555; transition: 0.5s;}
 .Ml:hover{background-color: #ffef98; color: #fcd555; border-radius: 50px 50px 0 0; transition: 0.5s;}
@@ -116,8 +115,8 @@ nav{width: 100%; background-color:#fcd555; text-align: center;}
 .sm5>div>div{flex: 1; border: #fff 1px solid;}
 
 /* 모바일 : 내비 */
-@media (max-width: 1000px){
-   nav{width: 30%; height: 64px; float: right; margin-top: 20px; text-align:left;}
+@media (max-width: 1200px){
+   nav{width: 30%; height: 64px; float: right; margin-top: 20px; text-align:left; background:#fff;}
    .Mm{width: 70%; height: 110vh; z-index: 999; background-color: #fff; 
     position: fixed; top: 0px; right: 0;}
    .hambuger{display: block;}
@@ -135,13 +134,10 @@ nav{width: 100%; background-color:#fcd555; text-align: center;}
    .Sm>li>a{text-align: inherit;}
    .Sm>div{display: none;}
    .Sm>li>a>div{display: none;}
-
 }
 
 @media (max-width: 500px){
 }
-/* 
-  */
 
 
 /* 메인 *************************************************************************/
@@ -202,6 +198,16 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
 
 
 /* 모바일 */
+@media (max-width: 1200px){
+    .contents1{margin-top: 60px;}
+    .contents1>div{height: 320px; border-radius: 0 150px 0 150px;}
+    .contents1 h2{ top: 0px;}
+    .con1_bestmenu{margin-top: 0px;}
+    .bxslider>li>div{margin-top: 40px;}
+    .bx-viewport ul, li{height: 320px}
+    .bxslider>li>div>img{width: 40%;} 
+    .bxslider>li>div>p{padding: 16px 0;}
+}
 @media (max-width: 500px){
     .contents1{margin-top: 8px;}
     .contents1>div{height: 320px; border-radius: 0 40px 0 40px;}
@@ -216,25 +222,26 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
     .contents1:hover .line{width: 500px; transform: none; transition: none;}
     .contents1 h2{ top: -48px;}
     .con1_bestmenu{margin-top: 0px;}
-    .bxslider>li>div{margin-top: 0px;}
+    .bxslider>li>div{margin-top: 20px;}
+    .bx-viewport li{width: 30px; border: 1px solid ;}
     .bx-viewport ul, li{height: 320px}
-    .bxslider>li>div>img{width: 55%;} 
+    .bxslider>li>div>img{width: 40%;} 
     .bxslider>li>div>p{padding: 16px 0;}
 }
 
 /* 콘텐츠 2 : brand doboo ***************************************************************************/
 .contents2{margin-top: 120px;}
 .contents2>div{width: 100%; height: 480px; position: relative; overflow: hidden;}
-.con2_left{display: none; width: 480px; height: 480px; 
-    position: absolute; left: 90%; animation: bingle ease 4s forwards; transform-origin: 50% 50%;}
+.con2_left{display: block; width: 480px; height: 480px; 
+    position: absolute; left: 90%; animation: bingle ease 2s forwards; transform-origin: 50% 50%;}
 .con2_left>img{width: 480px; height: 480px;}
 @keyframes bingle{
     0% {opacity: 0; left: 90%; transform: rotate(0deg); }
     36% {opacity: 0; left: 24%; transform: rotate(-270deg);}
     100% {opacity: 1; left:-4%; transform: rotate(-360deg);}
 }
-.con2_middle{display: none; width: 480px; height: 480px;
-    position: absolute; left: 90%; animation: bangle ease 2.5s forwards; /*animation-delay: 1.5s;*/ transform-origin: 50% 50%;}
+.con2_middle{display: block; width: 480px; height: 480px;
+    position: absolute; left: 90%; animation: bangle ease 1.5s forwards; /*animation-delay: 1.5s;*/ transform-origin: 50% 50%;}
 .con2_middle>img{width: 480px; height: 480px;}
 @keyframes bangle{
     0% {opacity: 0; left: 90%; transform: rotate(0deg);}
@@ -248,6 +255,15 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
 .con2R_textbox>h3{padding-bottom: 5px; color: #c67a44;}
 .con2R_textbox>h2{padding-bottom: 10px; color: #6a4c47;}
 .con2R_textbox>p{line-height: 1.5rem; color: #975f4b;}
+
+@media (max-width: 1200px){
+    .contents2{margin-top: 60px;}
+    .con2_left{display: none; left: -200%;}
+    .con2_middle{display: none; left: -200%;}
+    .con2_right{width: 100%;}
+    @keyframes bangle{ 100%{left: -200%;}}
+    @keyframes bingle{ 100%{left: -200%;}}
+}
 
 @media (max-width: 500px){
     .contents2{display: none;}
@@ -294,6 +310,17 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
 .con3_boxset>div:nth-child(4):hover{color:#3dbf7e; transition: all 0.5s;}
 
 /* 모바일 */
+@media (max-width: 1200px){
+    .contents3{margin-top: 60px;}
+    .contents3>div{width: 100%; height: 280px; border-radius: 150px 0 150px;}
+
+    .contents3 .inner{width: 100%;}
+    .con3_boxset{width: 100%; margin-top: 48px; display: flex;}
+    .con3_boxset>div{width: 25%; margin: 0; float: none; flex: 1;}
+    .con3_boxset>div:last-child{float: none; flex: 1;}
+    .con3_boxset>div h5{padding-top: 8px; font-size: 0.8em}
+    .con3_boxset>div>div{width: 88px; height: 88px;}
+}
 @media (max-width: 500px){
     .contents3{margin-top: 8px; width: 100%;}
     .contents3>div{width: 100%; height: 280px; border-radius: 40px 0 40px 0;}
@@ -384,6 +411,32 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
 .con4_sns4:hover >div:nth-child(2){background-color: rgba(8, 122, 175, 0.5); transition: all 0.5s;}   
 
 /* 모바일 */
+@media (max-width: 1200px){
+    .contents4{margin: 60px 0 120px 0 }
+    .contents4>.inner{width: 65%;}
+    .con4_left{float: none; width: 100%; height: fit-content;}
+    .con4_left>.con4_brand{width: 100%; height: 250px; margin-bottom: 8px;}
+    .con4_left>.con4_brand>div{width: 100%; height: 250px; transform: translateY(200px);}
+    .con4_left>.con4_brand:hover >div{transform: translateY(0px);}
+    .con4_left>.con4_brand:hover h3{line-height: 250px; transition: 1s;} 
+
+    .con4L-bottom>div{height: 250px;}
+    .con4L-bottom>.con4_order{float: left; width: 49%; border-radius: 0 0 0 100px; overflow: hidden;}
+    .con4L-bottom>.con4_order:hover>div{height: 250px;}
+    .con4L-bottom>.con4_order:hover h4{line-height: 250px;}
+    .con4L-bottom>.con4_franchise{float: right; width: 49%;}
+    .con4L-bottom>.con4_franchise:hover>div{height: 250px;}
+    .con4L-bottom>.con4_franchise:hover h4{line-height: 250px;}
+
+    .con4_right{float: none; width: 100%; height: auto;}
+    .con4_right>div:nth-child(1){height: 250px; margin: 60px 0;}
+
+    .con4R-bottom{width: 100%; height: fit-content;}
+    .con4R-bottom .con4_sns1{float: left; width: 50%; height: 250px;}
+    .con4R-bottom .con4_sns2{float: right; height: 250px; border-radius: 0 100px 0 0 ;}
+    .con4R-bottom .con4_sns3{float: left; width: 50%; height: 250px;}
+    .con4R-bottom .con4_sns4{float: right; width: 50%; height: 250px;}
+}
 @media (max-width: 500px){
     .contents4{margin: 8px 0 8px 0;}
     .contents4>.inner{width: 100%;}
@@ -430,10 +483,9 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
     .mobile_menu{display: block;}
 }
 
-
 /* 풋터 **************************************************************************************************/
 footer{display: inline-block; width: 100%; height: auto; margin-top: 32px; padding-bottom: 64px;
-     background-color: rgba(126, 206, 244, 1);}
+     background-color: rgba(126, 206, 244, 1); overflow: hidden;}
 footer .center{width: 100%; height: 100px;}
 .center img{display: block; width: 285px; height: 59px; margin: 40px auto;}
 
@@ -463,6 +515,27 @@ option{font-size: 1rem; color: rgb(8, 122, 175);}
 .f_sns2>div:nth-child(2){background: url(../images/blog.png); background-position: center; background-repeat: no-repeat;}
 
 .f_right>div>div{width: 72px; height: 72px; border-radius: 50%; background-color:snow;}
+
+@media (max-width: 1200px){
+    footer{width: 100%; height: auto; margin-top: 120px;}
+    footer .inner{width: 100%;}
+    footer .center{width: 100%; height: fit-content;}
+    .center img{display: block; width: 30%; height: fit-content; margin: 32px auto;}
+
+    .f_left{float: none; width: 100%; text-align: center; margin: 0 auto;}
+    .f_left>div>form{width: 40%; height: 40px; margin: 16px auto ; background-color: #fff; border-radius: 20px;}
+    .f_left>.fL_text{width: 100%; height: fit-content;}
+    .f_left>.fL_text>div:nth-child(1){width:30%; float: left; margin-left: 20%;}
+    .f_left>.fL_text>div:nth-child(2){width:30%; float: right; margin-right: 20%;}
+
+    .f_middle{float: none; width: 100%; text-align: center; margin-top: 16px;}
+    
+    .f_right{float: none; width: 100%; margin-left: calc(50% - 80px); margin-bottom: 32px;}
+    .f_right>div{padding-right: 0px;}
+
+.f_sns1>div{float: left; margin: 8px; cursor: pointer;}
+.f_sns2>div{float: left; margin: 8px; cursor: pointer;}
+}
 
 @media (max-width: 500px){
     footer{width: 100%; height: auto; padding-top: 10px;}
