--- a/project02/css/style.css
+++ b/project02/css/style.css
@@ -186,7 +186,6 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
 /* bx슬라이더 */
 .con1_bestmenu{width: 100%; height: 450px; margin-top: 24px;}
 .bxslider{width: 100%; height: 100%;}
-
 .bx-wrapper{width: 100%; height: 100%; margin: 0;}
 .bx-viewport{width: 100%; height: 300px;}
 .bx-viewport ul{height: 400px;}
@@ -203,9 +202,10 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
     .contents1>div{height: 320px; border-radius: 0 150px 0 150px;}
     .contents1 h2{ top: 0px;}
     .con1_bestmenu{margin-top: 0px;}
+
+    .bx-viewport>.bxslider>li{width: 200px!important; height: fit-content; /*border: 1px solid red;*/}
     .bxslider>li>div{margin-top: 40px;}
-    .bx-viewport ul, li{height: 320px}
-    .bxslider>li>div>img{width: 40%;} 
+    .bxslider>li>div>img{width: 50%;} 
     .bxslider>li>div>p{padding: 16px 0;}
 }
 @media (max-width: 500px){
@@ -222,8 +222,9 @@ main li:nth-child(3){background: #5cce39; left: 200%;}
     .contents1:hover .line{width: 500px; transform: none; transition: none;}
     .contents1 h2{ top: -48px;}
     .con1_bestmenu{margin-top: 0px;}
+
     .bxslider>li>div{margin-top: 20px;}
-    .bx-viewport li{width: 30px; border: 1px solid ;}
+
     .bx-viewport ul, li{height: 320px}
     .bxslider>li>div>img{width: 40%;} 
     .bxslider>li>div>p{padding: 16px 0;}
