--- a/project01/css/style_sub2.css
+++ b/project01/css/style_sub2.css
@@ -118,6 +118,7 @@ position: relative;}
     position: relative; margin: 0 auto;}
 .M_mapbox>div{background-color: #c19973; text-align: center; color: #fff; 
         position: absolute;}
+.M_mapbox>div:nth-child(2){cursor: pointer;}
 .mapboxset_M>div{background-color: #ece6df; text-align: center; color: #fff; position: absolute;}
 .mapboxset_M>div:nth-child(1){width: 200px; height: 50px; top:0; left: 50px; border-radius: 20px; line-height: 50px; cursor: pointer;}
 .mapboxset_M>div:nth-child(2){width: 50px; height: 175px; top:50px; border-radius: 20px 20px 0 0 ; line-height: 150px; cursor: pointer;}
